{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 50,
  "lineage": "ad68b618-3a48-ac8a-6042-5db9c298f5c4",
  "resources": [
    {
      "module": "module.gke",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gcp-network.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/kefir-306607/global/networks/gke-network-dev",
            "name": "gke-network-dev",
            "project": "kefir-306607",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kefir-306607/global/networks/gke-network-dev"
          }
        }
      ]
    },
    {
      "module": "module.gcp-network.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gcp-network.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "europe-north1/gke-subnet-dev",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-03-08T13:58:41.335-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/kefir-306607/regions/europe-north1/subnetworks/gke-subnet-dev",
            "ip_cidr_range": "10.10.0.0/16",
            "name": "gke-subnet-dev",
            "network": "https://www.googleapis.com/compute/v1/projects/kefir-306607/global/networks/gke-network-dev",
            "private_ip_google_access": false,
            "project": "kefir-306607",
            "region": "europe-north1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.20.0.0/16",
                "range_name": "ip-range-pods"
              },
              {
                "ip_cidr_range": "10.30.0.0/16",
                "range_name": "ip-range-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/kefir-306607/regions/europe-north1/subnetworks/gke-subnet-dev"
          },
          "dependencies": [
            "module.gcp-network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}